# service-discovery

./: CMakeLists.txt  Dockerfile  build.sh
Inc/: cache.hpp  connection_config.hpp  defines.hpp  discovery_socket.hpp  option.hpp  periodic_timer.hpp  service_announcement.hpp  service_discovery.hpp  service_message.hpp  utils.hpp
Tests/: CMakeLists.txt  service_message.cpp
examples/: CMakeLists.txt  service_announcement.cpp  service_discovery.cpp
rest-api/: CMakeLists.txt  main.cpp
